fix(ui): add z-index to bottom bar
Fixes #2684

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -481,6 +481,7 @@ span.title.title-part.text-default + div.widget {
   font-size: 10px;
   padding: 5px;
   line-height: 10px;
+  z-index: 6;
 }
 
 /* PAGES */
